<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".sqlLite">

    <TextView
        android:id="@+id/backbtn"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="312dp"
        android:background="@drawable/backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/LoginHeader"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_marginTop="128dp"
        android:text="@string/login_header1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginheader2"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_marginTop="160dp"
        android:text="@string/login_header2"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/inputcomponent"
        android:ems="10"
        android:drawableStart="@drawable/userinfo"
        android:drawablePadding="12sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/phone_email_or_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginheader2" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/inputcomponent"
        android:drawablePadding="12sp"
        android:ems="10"
        android:drawableStart="@drawable/info"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <TextView
        android:id="@+id/forgotpasswordlink"
        android:layout_width="136dp"
        android:layout_height="18dp"
        android:layout_marginStart="256dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:text="@string/forgot_password"
        android:textColor="#211E8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#211E8A"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotpasswordlink"
        app:layout_constraintVertical_bias="0.321" />
    <Button
        android:id="@+id/LoginOTP"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/layoutframe"
        android:backgroundTint="@color/white"
        android:text="@string/login_via_otp"
        android:textAlignment="center"
        android:textColor="#7C4DFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="TextContrastCheck,TextContrastCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/footerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="#0E0E24"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.233"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginOTP"
            app:layout_constraintVertical_bias="0.314" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#211E8A"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.683"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginOTP"
            app:layout_constraintVertical_bias="0.327" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>