<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".resetpassword">

    <TextView
        android:id="@+id/backbtn"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="312dp"
        android:background="@drawable/backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/LoginHeader"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_marginTop="128dp"
        android:text="@string/resentpasswordHeader1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginheader2"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_marginTop="160dp"
        android:text="@string/resentpasswordHeader2"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/resetpasswordvaluedata"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/inputcomponent"
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/resentinputvalueHit"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:textColorHint="#546E7A"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginheader2" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="325dp"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#211E8A"
        android:text="@string/resetBtnValue"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetpasswordvaluedata"
        app:layout_constraintVertical_bias="0.096" />
</androidx.constraintlayout.widget.ConstraintLayout>