<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211E8A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="169dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Subheader"
        android:layout_width="214dp"
        android:layout_height="43dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="90dp"
        android:text="@string/sub_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="#040404"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Subheader"
            app:layout_constraintVertical_bias="0.933" />

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_marginBottom="36dp"
            android:background="@drawable/layoutframe"
            android:text="@string/Register_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginBtn"
            app:layout_constraintVertical_bias="0.933" />
    </LinearLayout>

    <TextView
        android:id="@+id/cap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="361dp"
        android:layout_marginBottom="868dp"
        android:text="@string/sub_name2"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>