<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP">

    <TextView
        android:id="@+id/backbtn"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="312dp"
        android:background="@drawable/backbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_header1"
        android:layout_width="182dp"
        android:layout_height="47dp"
        android:layout_marginTop="128dp"
        android:text="@string/OTPHeader"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginStart="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sub_header2"
        android:layout_width="319dp"
        android:layout_height="53dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="168dp"
        android:text="@string/otp_sub_header"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_header1"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="389dp"
        android:layout_height="91dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_header2">

        <EditText
            android:id="@+id/input1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/inputcomponent"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/input1"
            android:maxLength="1"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.031"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sub_header2"
            app:layout_constraintVertical_bias="0.114"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/input2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/inputcomponent"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/input2"
            android:maxLength="1"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            android:textSize="40sp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="304dp" />

        <EditText
            android:id="@+id/input3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/inputcomponent"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/input2"
            android:maxLength="1"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            android:textSize="40sp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="304dp" />

        <EditText
            android:id="@+id/input4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/inputcomponent"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:importantForAutofill="no"
            android:inputType="number"
            android:labelFor="@id/input2"
            android:maxLength="1"
            android:maxLines="1"
            android:textAlignment="center"
            android:textColorHint="#546E7A"
            android:textSize="40sp"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="304dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/expiretime"
        android:layout_width="129dp"
        android:layout_height="22dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="Code expires 2:59"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/footerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_Asking"
            android:textColor="#0E0E24"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.233"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginOTP"
            app:layout_constraintVertical_bias="0.314" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OTP_Resend"
            android:textColor="#211E8A"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.683"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginOTP"
            app:layout_constraintVertical_bias="0.327" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>